[gd_scene load_steps=14 format=3 uid="uid://ce2efrqeqkwis"]

[ext_resource type="Theme" uid="uid://c6jbdk3trmuen" path="res://resources/theme/microsoftClassic.tres" id="1_xfvoa"]
[ext_resource type="Texture2D" uid="uid://ymhhbshnc8sx" path="res://assets/fish/shark.png" id="2_1l46r"]
[ext_resource type="Script" uid="uid://b6t335aytpnnv" path="res://scripts/shop.gd" id="2_2fc2m"]
[ext_resource type="Texture2D" uid="uid://b8xsof348chs3" path="res://assets/fish/fish.png" id="3_1l46r"]
[ext_resource type="Texture2D" uid="uid://cu4x5sphqq51h" path="res://assets/fish/crab.png" id="3_032fp"]
[ext_resource type="Script" uid="uid://cyfrwajrr2bdy" path="res://resources/entityResource.gd" id="3_y6sft"]
[ext_resource type="Resource" uid="uid://dh1iwptcn86ga" path="res://resources/Fish/Guppy.tres" id="4_m4ofw"]
[ext_resource type="Resource" uid="uid://bfvyxhqsom57s" path="res://resources/Fish/Crab.tres" id="5_heatd"]
[ext_resource type="Resource" uid="uid://kr4dgngu88kd" path="res://resources/Fish/Shark.tres" id="6_m4ofw"]
[ext_resource type="Resource" uid="uid://chxbrefwiflu6" path="res://resources/Fish/Algae.tres" id="7_1v8qu"]
[ext_resource type="Resource" uid="uid://dihwc372qm8cu" path="res://resources/Fish/Piranha.tres" id="8_24it5"]
[ext_resource type="Resource" uid="uid://d0v76mgffora8" path="res://resources/Fish/Gary.tres" id="9_7mqwv"]
[ext_resource type="Texture2D" uid="uid://dvjoomqvhlffj" path="res://assets/icons/32/algae_icon.png" id="10_heatd"]

[node name="shop" type="Control" node_paths=PackedStringArray("buttons") groups=["Shop"]]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -360.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(140, 156)
theme = ExtResource("1_xfvoa")
script = ExtResource("2_2fc2m")
fish = Array[ExtResource("3_y6sft")]([ExtResource("4_m4ofw"), ExtResource("5_heatd"), ExtResource("6_m4ofw"), ExtResource("7_1v8qu"), ExtResource("8_24it5"), ExtResource("9_7mqwv")])
buttons = [NodePath("Panel/HBoxContainer/VBoxContainer/Button2"), NodePath("Panel/HBoxContainer/VBoxContainer/Button3"), NodePath("Panel/HBoxContainer/VBoxContainer/Button"), NodePath("Panel/HBoxContainer/VBoxContainer/Button4"), NodePath("Panel/HBoxContainer/VBoxContainer/Button5"), NodePath("Panel/HBoxContainer/VBoxContainer/Button6")]

[node name="CloseButton2" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -336.0
offset_top = -136.0
offset_right = 416.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 16.0
offset_top = 40.0
offset_right = 266.0
offset_bottom = 242.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="Button2" type="Button" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Guppy: 20 $"
icon = ExtResource("3_1l46r")

[node name="Button3" type="Button" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Crab: 40$"
icon = ExtResource("3_032fp")

[node name="Button" type="Button" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Shark: 3 grown Guppies
"
icon = ExtResource("2_1l46r")

[node name="Button4" type="Button" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Algae: 100$
"
icon = ExtResource("10_heatd")

[node name="Button5" type="Button" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Algae: 1000$
"
icon = ExtResource("10_heatd")

[node name="Button6" type="Button" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Algae: 1000$
"
icon = ExtResource("10_heatd")

[node name="CloseButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 256.0
offset_top = 8.0
offset_right = 280.0
offset_bottom = 24.0
mouse_default_cursor_shape = 2
flat = true

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 48.0
offset_bottom = 23.0
text = "Shop"

[node name="bulkBuyWindow" type="Panel" parent="."]
layout_mode = 0
offset_left = 296.0
offset_top = 80.0
offset_right = 424.0
offset_bottom = 208.0

[node name="Label" type="Label" parent="bulkBuyWindow"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 48.0
offset_bottom = 23.0
text = "Number to buy"

[node name="SpinBox" type="SpinBox" parent="bulkBuyWindow"]
layout_mode = 0
offset_left = 32.0
offset_top = 64.0
offset_right = 104.0
offset_bottom = 96.0
min_value = 1.0
value = 1.0
rounded = true
update_on_text_changed = true

[connection signal="button_down" from="CloseButton2" to="." method="_on_close_button_button_down"]
[connection signal="button_down" from="Panel/HBoxContainer/VBoxContainer/Button2" to="." method="_on_button_2_button_down"]
[connection signal="button_down" from="Panel/HBoxContainer/VBoxContainer/Button3" to="." method="_on_button_3_button_down"]
[connection signal="button_down" from="Panel/HBoxContainer/VBoxContainer/Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="Panel/HBoxContainer/VBoxContainer/Button4" to="." method="_on_button_4_button_down"]
[connection signal="button_down" from="Panel/HBoxContainer/VBoxContainer/Button5" to="." method="_on_button_4_button_down"]
[connection signal="button_down" from="Panel/HBoxContainer/VBoxContainer/Button6" to="." method="_on_button_4_button_down"]
[connection signal="button_down" from="Panel/CloseButton" to="." method="_on_close_button_button_down"]
[connection signal="value_changed" from="bulkBuyWindow/SpinBox" to="." method="_on_spin_box_value_changed"]
